<resources>
    <string name="app_name">SuperheroesTFG</string>

    <string name="menu_fragment_home">home</string>
    <string name="menu_fragment_credits">credits</string>

    <string name="super_heroes_name">Nombre super hereo</string>

    <string name="menu_go_to_favorites">Ir a favoritos</string>

    <!-- Strings for Shared prefs -->
    <string name="shared_prefs_favorite_superheroes">favoriteSuperHeroes</string>

    <!-- Strings for SuperHeroDetailFragment -->
    <string name="detail_hero_toolbar_title">Detalle heroe</string>
    <string name="detail_hero_stats">Estadísticas</string>
    <string name="detail_hero_biography">Biografía</string>
    <string name="detail_hero_work">Trabajo</string>

    <string name="detail_hero_name">Nombre:</string>
    <string name="detail_hero_slug">Slug:</string>

    <string name="detail_hero_full_name">Nombre completo:</string>
    <string name="detail_hero_alter_egos">Alter egos:</string>
    <string name="detail_hero_birth">Fecha de nacimiento:</string>

    <string name="detail_hero_intelligence">Inteligencia:</string>
    <string name="detail_hero_strength">Fuerza:</string>
    <string name="detail_hero_speed">Velocidad:</string>
    <string name="detail_hero_durability">Durabilidad:</string>
    <string name="detail_hero_power">Poder:</string>
    <string name="detail_hero_combat">Combate:</string>

    <string name="detail_hero_occupation">Ocupación:</string>
    <string name="detail_hero_base">Base:</string>

    <!-- Strings for Error -->
    <string name="title_error_server">Error del servidor</string>
    <string name="description_error_server">Ha ocurrido un problema al contactar con el servidor. Inténtalo de nuevo más tarde.</string>
    <string name="title_error_connection">Sin conexión</string>
    <string name="description_error_connection">No se ha podido establecer conexión a internet. Comprueba tu red e inténtalo de nuevo.</string>
    <string name="title_error_unknown">Error desconocido</string>
    <string name="description_error_unknown">Ha ocurrido un error inesperado. Por favor, intenta de nuevo o contacta con soporte.</string>

    <!-- Strings for Credits -->
    <string name="credits_text">TFG de Alfonso</string>
    <string name="search_hero_hint">Buscar héroe...</string>
    <string name="credits_header">Creditos y Recursos\n</string>
    <string name="credits_resources">Recursos externos</string>
    <string name="credits_developer">Desarrollador</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developers_bottom_sheet_header">Desarrollado por:</string>
</resources>