<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/credits_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_text"
            style="@style/CreditSectionStyle"
            android:text="@string/credits_header" />


        <androidx.cardview.widget.CardView
            android:id="@+id/credits_resources_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_text"
            android:layout_marginBottom="@dimen/spacing_text"
            app:cardCornerRadius="@dimen/spacing_text"
            app:cardElevation="@dimen/spacing_xs">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/credits_resources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_text"
                android:text="@string/credits_resources"
                android:textAppearance="?attr/textAppearanceBody1" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/credits_developer_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_text"
            app:cardCornerRadius="@dimen/spacing_text"
            app:cardElevation="@dimen/spacing_xs">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/credits_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_text"
                android:text="@string/credits_developer"
                android:textAppearance="?attr/textAppearanceBody1" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
